--- a/EditorDeGrafos/EditorDeGrafos.csproj
+++ b/EditorDeGrafos/EditorDeGrafos.csproj
@@ -141,6 +141,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Regiones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Regiones.Designer.cs">
+      <DependentUpon>Regiones.cs</DependentUpon>
+    </Compile>
     <Compile Include="TamañoYOrden.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -198,6 +204,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Regiones.resx">
+      <DependentUpon>Regiones.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TamañoYOrden.resx">
       <DependentUpon>TamañoYOrden.cs</DependentUpon>
     </EmbeddedResource>
