--- a/EditorDeGrafos/EditorDeGrafos.csproj
+++ b/EditorDeGrafos/EditorDeGrafos.csproj
@@ -54,6 +54,12 @@
     <Compile Include="Corolarios.Designer.cs">
       <DependentUpon>Corolarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dijkstra.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dijkstra.Designer.cs">
+      <DependentUpon>Dijkstra.cs</DependentUpon>
+    </Compile>
     <Compile Include="EditorDeGrafos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -161,6 +167,9 @@
     </Compile>
     <EmbeddedResource Include="Corolarios.resx">
       <DependentUpon>Corolarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dijkstra.resx">
+      <DependentUpon>Dijkstra.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EditorDeGrafos.resx">
       <DependentUpon>EditorDeGrafos.cs</DependentUpon>
