--- a/EditorDeGrafos/EditorDeGrafos.csproj
+++ b/EditorDeGrafos/EditorDeGrafos.csproj
@@ -157,6 +157,12 @@
     <Compile Include="PendientesYAislados.Designer.cs">
       <DependentUpon>PendientesYAislados.cs</DependentUpon>
     </Compile>
+    <Compile Include="PesosAristas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PesosAristas.Designer.cs">
+      <DependentUpon>PesosAristas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Punto.cs" />
@@ -235,6 +241,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PendientesYAislados.resx">
       <DependentUpon>PendientesYAislados.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PesosAristas.resx">
+      <DependentUpon>PesosAristas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
