Solución de BBP & Aciclicdad
Se logro soluciónar el algoritmo del Bosque de Busqueda Profunda

Ademas que de se aplico la prueba de aciclicidad logrando generar todos los ciclos posibles y generando su simulación

--- a/EditorDeGrafos/EditorDeGrafos.csproj
+++ b/EditorDeGrafos/EditorDeGrafos.csproj
@@ -60,6 +60,12 @@
     <Compile Include="CambiaPesoArista.Designer.cs">
       <DependentUpon>CambiaPesoArista.cs</DependentUpon>
     </Compile>
+    <Compile Include="Ciclos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ciclos.Designer.cs">
+      <DependentUpon>Ciclos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Corolarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -202,6 +208,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CambiaPesoArista.resx">
       <DependentUpon>CambiaPesoArista.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ciclos.resx">
+      <DependentUpon>Ciclos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Corolarios.resx">
       <DependentUpon>Corolarios.cs</DependentUpon>
