Bosque en Amplitud y Organización
Se realizo el algoritmo de busqueda en Amplitud y se orgaanizo el codigo de los grafos especiales para ser leida con mayor facilidad

--- a/EditorDeGrafos/EditorDeGrafos.csproj
+++ b/EditorDeGrafos/EditorDeGrafos.csproj
@@ -48,6 +48,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arista.cs" />
+    <Compile Include="AristasBBA.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AristasBBA.Designer.cs">
+      <DependentUpon>AristasBBA.cs</DependentUpon>
+    </Compile>
     <Compile Include="AristasBBP.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -203,6 +209,9 @@
     <Compile Include="TamañoYOrden.Designer.cs">
       <DependentUpon>TamañoYOrden.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AristasBBA.resx">
+      <DependentUpon>AristasBBA.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AristasBBP.resx">
       <DependentUpon>AristasBBP.cs</DependentUpon>
     </EmbeddedResource>
